# SPATIUM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.claude/: CLAUDE.md  CONSTRAINTS.md
.claude/skills/implement-sdd/: SKILL.md
.reports/: codemap-diff.txt
app/: App.cpp  App.h  GlfwContext.h
core/: glad.c
core/Graphic/: EBO.h  FBO.cpp  FBO.h  SSBO.h  StorageBuffer.h  UBO.h  VAO.cpp  VAO.h  VBO.h
core/Graphic/ShaderProgram/: ComputeShader.h  GraphicShader.h  ShaderProgram.h
core/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ProjectionMode.h
core/event/: EventBus.h  EventID.h  events.h
core/gl/debug/: Debug.h
core/gl/shader/: ComputeShader.cpp  ComputeShader.h  GraphicShader.cpp  GraphicShader.h  ShaderProgram.h
core/globj/: BufferObject.h  EBO.cpp  EBO.h  FBO.cpp  SSBO.h  StorageBuffer.h  VAO.cpp  VAO.h  VBO.h
core/globj/debug/: Debug.cpp
core/globj/interfaces/: IGPUResource.h
core/globj/shader_program/: GraphicShader.h
core/graphics/: BufferObject.h  EBO.cpp  EBO.h  SSBO.h  StorageBuffer.h  UBO.cpp  UBO.h  VAO.cpp  VAO.h  VBO.h
core/graphics/shader_program/: ComputeShader.cpp  ComputeShader.h  GraphicShader.cpp  ShaderProgram.cpp  ShaderProgram.h
core/render/: Renderer.cpp  Renderer.h
core/scene/: Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Scene.cpp  Scene.h  Vertex.h
core/window/: Window.cpp  Window.h
docs/: class.mmd
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  data.md  dependencies.md
include/glad/: glad.h
sdd/: sdd_window_system.md  template.md
sdd/sdd_2_scene_rendering_camera_input_subsystems/: CONSTRAINTS.md  sdd_2_1.md  sdd_2_2.md  sdd_2_3.md  sdd_2_4.md  sdd_2_5.md  sdd_2_scene_rendering_camera_input_subsystems.md
shader/fragment/: basic.fsh
shader/vertex/: basic.vsh
